# rtsp-server

./: .#pyproject.toml  main.spec  pyproject.toml
rtsp_server/: log.txt  main.py
tests/: mock_server.py
