[project]
name = "rtsp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.123.8",
    "httpx>=0.28.1",
    "opencv-python>=4.12.0.88",
    "pyzbar>=0.1.9",
]

[dependency-groups]
build = [
    "pyinstaller>=6.17.0",
]
